--- a/crm-frontend/src/Modal.css
+++ b/crm-frontend/src/Modal.css
@@ -11,7 +11,7 @@
 
 .modal-main {
   position: fixed;
-  background: white;
+  background: rgb(2, 0, 132);
   width: 80%;
   height: auto;
   top: 50%;
